--- a/index.html
+++ b/index.html
@@ -3,10 +3,36 @@
 <head>
     <title>Kyumd Mobile Lab</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link rel="stylesheet" type="text/css" href="css/pages.css" />
 </head>
 <body>
-<h1>高苑科技大學行銷系 - 行動商務實驗室</h1>
+<h1 style="margin-top:20px; margin-left:20px;">高苑科技大學行銷系 - 行動商務實驗室</h1>
 <hr />
+<h2 style="margin-top:20px; margin-left:20px;">實驗室成員:</h2><br/>
+
+<div class="box">
+    <div class="title" style=" width:180px;">老闆 / 助理教授</div>
+    <img class="photo" src="photos/YOU.PNG" />
+    <div class="info">
+        <div class="name">尤濬哲</div>
+        <div class="ename">You Jun-Jer</div>
+        <br/>
+        <div class="text">專長: AI、VR/AR 應用開發、Mobile App 程式開發。</div>
+        <div class="text">擅長的程式語言: Basic Language。</div>
+    </div>
+</div>
+
+<div class="box">
+    <div class="title" style=" width:180px;">程式員 / 專任助理</div>
+    <img class="photo" src="photos/ling.jpg" />
+    <div class="info">
+        <div class="name">凌偉誠</div>
+        <div class="ename">Ling Wei-Cheng</div>
+        <br/>
+        <div class="text">專長: iOS/Android App 程式開發。</div>
+        <div class="text">擅長的程式語言: Objective-C, JavaScript。</div>
+    </div>
+</div>
 
 </body>
 </html>
