--- a/index.html
+++ b/index.html
@@ -6,31 +6,34 @@
     <link rel="stylesheet" type="text/css" href="css/pages.css" />
 </head>
 <body>
-<h1 style="margin-top:20px; margin-left:20px;">高苑科技大學行銷系 - 行動商務實驗室</h1>
-<hr />
-<h2 style="margin-top:20px; margin-left:20px;">實驗室成員:</h2><br/>
-
-<div class="box">
-    <div class="title" style=" width:180px;">老闆 / 助理教授</div>
-    <img class="photo" src="photos/YOU.PNG" />
-    <div class="info">
-        <div class="name">尤濬哲</div>
-        <div class="ename">You Jun-Jer</div>
-        <br/>
-        <div class="text">專長: AI、VR/AR 應用開發、Mobile App 程式開發。</div>
-        <div class="text">擅長的程式語言: Basic Language。</div>
-    </div>
+<div style="background-color:white; height:100%; margin-left:5px; margin-right:5px; border-radius:15px; border: 1px solid #E0E0E0;">
+    <img src="images/kyumd-03.PNG" style="float:left; width:80px; height:80px; margin-top:10px; margin-left:15px; margin-bottom:15px; border-radius:10px;">
+    <div style="float:left; margin-top:20px; margin-left:25px; font-size:2.0em; font-weight:bold; margin-top:28px; margin-bottom:15px; background-color:white">高苑科技大學行銷系 - 行動商務實驗室</div>
+    <div id="clear" style="clear:both;"></div>
 </div>
-
-<div class="box">
-    <div class="title" style=" width:180px;">程式員 / 專任助理</div>
-    <img class="photo" src="photos/ling.jpg" />
-    <div class="info">
-        <div class="name">凌偉誠</div>
-        <div class="ename">Ling Wei-Cheng</div>
-        <br/>
-        <div class="text">專長: iOS/Android App 程式開發。</div>
-        <div class="text">擅長的程式語言: Objective-C, JavaScript。</div>
+<h2 style="clear:both; margin-top:35px; margin-left:30px;">實驗室成員:</h2><br/>
+<div style="clear:both;">
+    <div class="box">
+        <div class="title" style=" width:180px;">老闆 / 助理教授</div>
+        <img class="photo" src="photos/YOU.PNG" />
+        <div class="info">
+            <div class="name">尤濬哲</div>
+            <div class="ename">You Jun-Jer</div>
+            <br/>
+            <div class="text">專長: AI、VR/AR 應用開發、Mobile App 程式開發。</div>
+            <div class="text">擅長的程式語言: Basic Language。</div>
+        </div>
+    </div>
+    <div class="box">
+        <div class="title" style=" width:180px;">程式員 / 專任助理</div>
+        <img class="photo" src="photos/ling.jpg" />
+        <div class="info">
+            <div class="name">凌偉誠</div>
+            <div class="ename">Ling Wei-Cheng</div>
+            <br/>
+            <div class="text">專長: iOS/Android App 程式開發。</div>
+            <div class="text">擅長的程式語言: Objective-C, JavaScript。</div>
+        </div>
     </div>
 </div>
 
