--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/pages.css" />
 </head>
 <body>
-<div style="background-color:white; height:100%; margin-left:5px; margin-right:5px; border-radius:15px; border: 1px solid #E0E0E0;">
+<div style="background-color:white; height:100%; margin-left:5px; margin-right:5px; border-radius:15px; border: 1px solid 	#d0d0d0;">
     <img src="images/kyumd-03.PNG" style="float:left; width:80px; height:80px; margin-top:10px; margin-left:15px; margin-bottom:15px; border-radius:10px;">
     <div style="float:left; margin-top:20px; margin-left:25px; font-size:2.0em; font-weight:bold; margin-top:28px; margin-bottom:15px; background-color:white">高苑科技大學行銷系 - 行動商務實驗室</div>
     <div id="clear" style="clear:both;"></div>
