--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div style="float:left; margin-top:20px; margin-left:25px; font-size:2.0em; font-weight:bold; margin-top:28px; margin-bottom:15px; background-color:white">高苑科技大學行銷系 - 行動商務實驗室</div>
     <div id="clear" style="clear:both;"></div>
 </div>
-<hr style="margin-left:10px; margin-right:10px;"/>
-<h2 style="clear:both; margin-top:35px; margin-left:30px;">實驗室成員:</h2><br/>
+<!--<hr style="margin-left:10px; margin-right:10px;"/>-->
+<h2 style="clear:both; margin-top:35px; margin-left:30px; color:#5B5B5B;">實驗室成員:</h2><br/>
 <div style="clear:both;">
     <div class="box">
         <div class="title" style=" width:180px;">老闆 / 助理教授</div>
