--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <link rel="stylesheet" type="text/css" href="css/pages.css" />
 </head>
 <body>
-<div style="background-color:white; height:100%; margin-left:5px; margin-right:5px; border-radius:15px; border: 1px solid 	#d0d0d0;">
-    <img src="images/kyumd-03.PNG" style="float:left; width:80px; height:80px; margin-top:10px; margin-left:15px; margin-bottom:15px; border-radius:10px;">
+<div style="background-color:white; height:100%; margin-left:25px; margin-right:10px; border-radius:15px; border: 1px solid 	#d0d0d0;">
+    <img src="images/kyumd-03.PNG" style="float:left; width:80px; height:80px; margin-top:10px; margin-left:20px; margin-right:5px; margin-bottom:15px; border-radius:10px;">
     <div style="float:left; margin-top:20px; margin-left:25px; font-size:2.0em; font-weight:bold; margin-top:28px; margin-bottom:15px; background-color:white">高苑科技大學行銷系 - 行動商務實驗室</div>
     <div id="clear" style="clear:both;"></div>
 </div>
 <!--<hr style="margin-left:10px; margin-right:10px;"/>-->
-<h2 style="clear:both; margin-top:35px; margin-left:30px; color:#5B5B5B;">實驗室成員:</h2><br/>
-<div style="clear:both;">
+<div style="clear:both; margin-top:25px; margin-left:45px; color:#5B5B5B; font-size:1.5em; font-weight:bold;">實驗室成員:</div>
+<hr style="margin-left:35px; margin-right:20px; margin-bottom: 25px;"/>
+<div style="clear:both; margin-left:20px; margin-bottom:10px;">
     <div class="box">
         <div class="title" style=" width:180px;">老闆 / 助理教授</div>
         <img class="photo" src="photos/YOU.PNG" />
@@ -36,7 +37,8 @@
             <div class="text">擅長的程式語言: Objective-C, JavaScript。</div>
         </div>
     </div>
+    <div id="clear" style="clear:both;"></div>
 </div>
-
+<hr style="margin-left:35px; margin-right:20px; margin-bottom: 25px;"/>
 </body>
 </html>
