--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <div style="float:left; margin-top:20px; margin-left:25px; font-size:2.0em; font-weight:bold; margin-top:28px; margin-bottom:15px; background-color:white">高苑科技大學行銷系 - 行動商務實驗室</div>
     <div id="clear" style="clear:both;"></div>
 </div>
-<!--<hr style="margin-left:10px; margin-right:10px;"/>-->
-<div style="clear:both; margin-top:25px; margin-left:45px; color:#5B5B5B; font-size:1.5em; font-weight:bold;">實驗室成員:</div>
+
+<div style="clear:both; margin-top:25px; margin-left:45px; color:#5B5B5B; font-size:1.5em; font-weight:bold;">實驗室成員</div>
 <hr style="margin-left:35px; margin-right:20px; margin-bottom: 25px;"/>
+
 <div style="clear:both; margin-left:20px; margin-bottom:10px;">
     <div class="box">
         <div class="title" style=" width:180px;">老闆 / 助理教授</div>
@@ -39,6 +40,7 @@
     </div>
     <div id="clear" style="clear:both;"></div>
 </div>
-<hr style="margin-left:35px; margin-right:20px; margin-bottom: 25px;"/>
+<!--<hr style="margin-left:35px; margin-right:20px; margin-bottom: 25px;"/>-->
+
 </body>
 </html>
