--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <br/>
             <div class="text">專長: AI、VR/AR 應用開發、Mobile App 程式開發。</div>
             <div class="text">擅長的程式語言: Basic Language。</div>
+            <div class="text">最喜歡的程式語言: 。</div>
         </div>
     </div>
     <div class="box">
@@ -36,6 +37,7 @@
             <br/>
             <div class="text">專長: iOS/Android App 程式開發。</div>
             <div class="text">擅長的程式語言: Objective-C, JavaScript。</div>
+            <div class="text">最喜歡的程式語言: Smalltalk。</div>
         </div>
     </div>
     <div id="clear" style="clear:both;"></div>
