--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <div class="name">尤濬哲</div>
             <div class="ename">You Jun-Jer</div>
             <br/>
-            <div class="text">專長: AI、VR/AR 應用開發、Mobile App 程式開發。</div>
-            <div class="text">擅長的程式語言: Basic Language。</div>
-            <div class="text">最喜歡的程式語言: 。</div>
+            <div class="text">專長：AI、VR/AR 應用開發、Mobile App 程式開發、資料庫。</div>
+            <div class="text">擅長的程式語言：SQL、Basic。</div>
+            <div class="text">最喜歡的程式語言：。</div>
         </div>
     </div>
     <div class="box">
@@ -35,9 +35,9 @@
             <div class="name">凌偉誠</div>
             <div class="ename">Ling Wei-Cheng</div>
             <br/>
-            <div class="text">專長: iOS/Android App 程式開發。</div>
-            <div class="text">擅長的程式語言: Objective-C, JavaScript。</div>
-            <div class="text">最喜歡的程式語言: Smalltalk。</div>
+            <div class="text">專長：iOS/Android App 程式開發。</div>
+            <div class="text">擅長的程式語言：Objective-C、JavaScript。</div>
+            <div class="text">最喜歡的程式語言：Smalltalk。</div>
         </div>
     </div>
     <div id="clear" style="clear:both;"></div>
