--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <br/>
             <div class="text">專長：AI、VR/AR 應用開發、Mobile App 程式開發、資料庫。</div>
             <div class="text">擅長的程式語言：SQL、Basic。</div>
-            <div class="text">最喜歡的程式語言：。</div>
+            <div class="text">&nbsp;</div>
         </div>
     </div>
     <div class="box">
