--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <br/>
             <div class="text">專長：AI、VR/AR 應用開發、Mobile App 程式開發、資料庫。</div>
             <div class="text">擅長的程式語言：SQL、Basic。</div>
+            <div class="text">電子信箱：T70092@cc.kyu.edu.tw</div>
             <div class="text">&nbsp;</div>
         </div>
     </div>
@@ -38,6 +39,7 @@
             <div class="text">專長：iOS/Android App 程式開發。</div>
             <div class="text">擅長的程式語言：Objective-C、JavaScript。</div>
             <div class="text">最喜歡的程式語言：Smalltalk。</div>
+            <div class="text">電子信箱：dev.riddleling@gmail.com</div>
         </div>
     </div>
     <div id="clear" style="clear:both;"></div>
