--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <div class="name">凌偉誠</div>
             <div class="ename">Ling Wei-Cheng</div>
             <br/>
-            <div class="text">專長：iOS/Android App 程式開發。</div>
-            <div class="text">擅長的程式語言：Objective-C、JavaScript。</div>
+            <div class="text">專長：Mobile App 程式開發。</div>
+            <div class="text">擅長的程式語言：Objective-C、JavaScript、Ruby。</div>
             <div class="text">最喜歡的程式語言：Smalltalk。</div>
             <div class="text">電子信箱：dev.riddleling@gmail.com</div>
         </div>
