--- a/faceapp/index.html
+++ b/faceapp/index.html
@@ -104,28 +104,28 @@
             </tr>
             <tr>
                 <td><img id="rImg1" class="recommendImg" /></td>
-                <td id="rName1"></td> 
-                <td id="rPrice1"></td>
+                <td id="rName1" class="rname"></td> 
+                <td id="rPrice1" class="rprice"></td>
             </tr>
             <tr>
                 <td><img id="rImg2" class="recommendImg" /></td>
-                <td id="rName2"></td> 
-                <td id="rPrice2"></td>
+                <td id="rName2" class="rname"></td> 
+                <td id="rPrice2" class="rprice"></td>
             </tr>
             <tr>
                 <td><img id="rImg3" class="recommendImg" /></td>
-                <td id="rName3"></td> 
-                <td id="rPrice3"></td>
+                <td id="rName3" class="rname"></td> 
+                <td id="rPrice3" class="rprice"></td>
             </tr>
             <tr>
                 <td><img id="rImg4" class="recommendImg" /></td>
-                <td id="rName4"></td> 
-                <td id="rPrice4"></td>
+                <td id="rName4" class="rname"></td> 
+                <td id="rPrice4" class="rprice"></td>
             </tr>
             <tr>
                 <td><img id="rImg5" class="recommendImg" /></td>
-                <td id="rName5"></td> 
-                <td id="rPrice5"></td>
+                <td id="rName5" class="rname"></td> 
+                <td id="rPrice5" class="rprice"></td>
             </tr>
         </table>
     </div>
