--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="name">尤濬哲</div>
             <div class="ename">You Jun-Jer</div>
             <br/>
-            <div class="text">專長：AI、VR/AR 應用開發、Mobile App 程式開發、資料庫。</div>
+            <div class="text">專長：VR/AR 應用開發、Mobile App 程式開發、資料庫。</div>
             <div class="text">擅長的程式語言：SQL、Basic。</div>
             <div class="text">電子信箱：T70092@cc.kyu.edu.tw</div>
             <div class="text">&nbsp;</div>
